fix spacing utilities

--- a/src/less/utilities/spacing-responsive.less
+++ b/src/less/utilities/spacing-responsive.less
@@ -54,10 +54,11 @@
 
     // zero margins
 
-    .@{bpPrefix}--m-0         { .m-0; }
-    .@{bpPrefix}--m-t-0       { .m-t-0; }
-    .@{bpPrefix}--m-r-0       { .m-r-0; }
-    .@{bpPrefix}--m-b-0       { .m-b-0; }
+    .@{bpPrefix}--m-0        { .m-0; }
+    .@{bpPrefix}--m-t-0      { .m-t-0; }
+    .@{bpPrefix}--m-r-0      { .m-r-0; }
+    .@{bpPrefix}--m-b-0      { .m-b-0; }
+    .@{bpPrefix}--m-l-0      { .m-l-0; }
     
     // auto margins
     
@@ -65,10 +66,11 @@
     
     // zero paddings
     
-    .@{bpPrefix}--p-0         { .p-0; }
-    .@{bpPrefix}--p-t-0       { .p-t-0; }
-    .@{bpPrefix}--p-r-0       { .p-r-0; }
-    .@{bpPrefix}--p-b-0       { .p-b-0; }
+    .@{bpPrefix}--p-0       { .p-0; }
+    .@{bpPrefix}--p-t-0     { .p-t-0; }
+    .@{bpPrefix}--p-r-0     { .p-r-0; }
+    .@{bpPrefix}--p-b-0     { .p-b-0; }
+    .@{bpPrefix}--p-l-0     { .p-l-0; }
 
 }
 
